--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,10 @@ textarea::placeholder {
   border-bottom: 1px solid $ColorBorder1 !important;
 }
 
+.mt-170 {
+  margin-top: 170px !important;
+}
+
 // ============== Basic CSS End ============== //
 
 
